--- a/+prati_front/formulario_e_inputs.html
+++ b/+prati_front/formulario_e_inputs.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario e inputs</title>
+    <style>
+        div{
+            background-color: #fef7e1;
+            font-size: 20px;
+        }
+        form{
+            display: flex;
+            flex-direction: column;
+            text-align: start;
+            width: 100%;
+            justify-content: start;
+        }
+        label{
+            font-weight:700;
+            color:black;
+        }
+    </style>
 </head>
-
 <body>
     <div style="border: 1px solid red">
         <form action="">
-            <label for="">Nome completo</label>
+            <label for="">Nome completo:</label>
             <input type="text" placeholder="Digite o seu nome completo">
             <br>
             <br>
@@ -19,17 +35,18 @@
             <br>
             <br>
             <label for="">Senha:</label>
-            <input type="password" placeholder="digite sua senha">
+            <input id="test" type="password" placeholder="digite sua senha">
             <br>
             <br>
-            <label for="">Genero</label>
+            <label for="">Gênero:</label>
             <label for="male">
                 <input type="radio" name="gender" value="male"> Masculino
             </label>
             <label for="female">
                 <input type="radio" name="gender" value="female" id=""> Feminino
             </label>
-            <label><input type="radio" name="gender" value="other"> Outro
+            <label for="">
+                <input type="radio" name="gender" value="other"> Outro
             </label>
             <br>
             <br>
