--- a/+prati_front/formulario_e_inputs.html
+++ b/+prati_front/formulario_e_inputs.html
@@ -6,38 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario e inputs</title>
     <style>
-        div{
-            background-color: #fef7e1;
-            font-size: 20px;
-        }
-        form{
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+            padding: 0;
             display: flex;
-            flex-direction: column;
-            text-align: start;
-            width: 100%;
-            justify-content: start;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
-        label{
-            font-weight:700;
-            color:black;
+
+        #forms-container {
+            background-color: #fef7e1;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+            font-size: 24px;
+        }
+
+        label {
+            margin-bottom: 8px;
+            color: #555;
+            display: block;
+        }
+
+        input[type='text'],input[type='email'],input[type='password'],select,text{
+            width: 90%;
+            padding: 10px;
+            margin-bottom: 17px;
+            border-radius: 4px;
+        }
+
+        input[type='radio'],input[type='checkbox']{
+            margin-right: 8px;
+
+        }
+
+        button{
+            background-color: black;
+            color: white;
+            width: 100%;
+            height: 30px;
+            border: none;
+            border-radius: 4px;
+            font-size:16px;
+            cursor: pointer;
+        }
+
+        button:hover{
+            background-color: darkslategrey;
+            
+
         }
     </style>
 </head>
+
 <body>
-    <div style="border: 1px solid red">
-        <form action="">
+    <div>
+        <form action="" id="forms-container">
+            <h2>Cadastro de usuários</h2>
             <label for="">Nome completo:</label>
             <input type="text" placeholder="Digite o seu nome completo">
-            <br>
-            <br>
             <label for="">Email</label>
             <input type="email" placeholder="digite seu email">
-            <br>
-            <br>
             <label for="">Senha:</label>
             <input id="test" type="password" placeholder="digite sua senha">
-            <br>
-            <br>
             <label for="">Gênero:</label>
             <label for="male">
                 <input type="radio" name="gender" value="male"> Masculino
@@ -48,8 +88,6 @@
             <label for="">
                 <input type="radio" name="gender" value="other"> Outro
             </label>
-            <br>
-            <br>
             <label for="city">Cidade:</label>
             <select name="city" id="">
                 <option value="br">Sobral</option>
@@ -68,8 +106,6 @@
             <label for="terms">
                 <input type="checkbox" name="terms" required> Aceito os termos de condição
             </label>
-            <br>
-            <br>
             <button type="submit">Cadastrar</button>
         </form>
     </div>
